fix: wrong font in text field

--- a/SeasonViewer/wwwroot/css/site.css
+++ b/SeasonViewer/wwwroot/css/site.css
@@ -88,6 +88,9 @@ select {
 
 input {
     width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
 }
 
 
